kubernetes/infra/webhooks/ingresses/ingress-flux-webhook.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "chkpwd.com"
spec:
  ingressClassName: ext-ingress
  rules:
    - host: &host "flux-webhook.chkpwd.com"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
